--- a/TinyMatchGame/MainWindow.xaml
+++ b/TinyMatchGame/MainWindow.xaml
@@ -36,6 +36,7 @@
         <TextBlock Grid.Row="3" Grid.Column="1" Text="?" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Row="3" Grid.Column="2" Text="?" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Row="3" Grid.Column="3" Text="?" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36" MouseDown="TextBlock_MouseDown"/>
-        <TextBlock x:Name="infoTextBlock" HorizontalAlignment="Center" Grid.Row="4" TextWrapping="Wrap" Text="Information TextBlock" VerticalAlignment="Center" Grid.ColumnSpan="4" FontSize="36" MouseDown="InfoTextBlock_MouseBlock"/>
+        <TextBlock x:Name="infoTextBlock" HorizontalAlignment="Center" Grid.Row="4" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Grid.ColumnSpan="4" FontSize="36" MouseDown="InfoTextBlock_MouseBlock"/>
+        <Button x:Name="startButton" Grid.Column="1" Content="Start Play" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Click="StartGameButton_Click" Grid.ColumnSpan="2" FontSize="36"/>
     </Grid>
 </Window>
